# Projet_ingSI_2

./: .gitignore  README.md  pyproject.toml  run.py
code brute/: accueil.py  liste_repas.py  main.py  repas_anniversaire.py
data/: .gitkeep  contributions.json  repaspromo.sqlite3
docs/: design_poc.html
partie2_japhet/: creation_repas.py
partie_aceuil_tableaubord/: accueil.py  dashboard.py
src/: __init__.py  app.py  config.py  main.py
src/controllers/: __init__.py  app_controller.py
src/core/: __init__.py  models.py  repository.py  services.py  validators.py
src/repaspromo/: app.py  config.py
src/repaspromo/controllers/: app_controller.py
src/repaspromo/core/: __init__.py  models.py  repository.py  services.py  validators.py
src/repaspromo/ui/views/: contributions_view.py  dashboard_view.py  home_view.py  planning_view.py
src/repaspromo/ui/widgets/: __init__.py  stats_card.py
src/ui/: theme.py
src/ui/views/: __init__.py  dashboard.py  home.py  meal_create.py  meal_list.py  organisation.py
src/ui/widgets/: __init__.py  navbar.py  scrollable.py
tests/: __init__.py  test_services.py
